@@ -4,7 +4,6 @@ import com.intellij.codeInsight.hint.HintManager;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.ScrollType;
 import com.intellij.openapi.editor.ScrollingModel;
-import org.apache.commons.lang.StringUtils;
 import org.jetbrains.annotations.NotNull;
 
 public class EditorHintsNotifier {
@@ -13,7 +12,7 @@ public class EditorHintsNotifier {
     }
 
     private static void notify(@NotNull Editor editor, @NotNull String message, long position, @NotNull Runnable notifier) {
-        if (StringUtils.isBlank(message)) {
+        if (message.isBlank()) {
             return;
         }
 
@@ -28,11 +27,11 @@ public class EditorHintsNotifier {
         scrollingModel.runActionOnScrollingFinished(notifier);
     }
 
-    public static void notifyInfo(@NotNull Editor editor, @NotNull String message)  {
+    public static void notifyInfo(@NotNull Editor editor, @NotNull String message) {
         notify(editor, message, -1, () -> HintManager.getInstance().showInformationHint(editor, message));
     }
 
-    public static void notifyError(@NotNull Editor editor, @NotNull String message, long position)  {
+    public static void notifyError(@NotNull Editor editor, @NotNull String message, long position) {
         notify(editor, message, position, () -> HintManager.getInstance().showErrorHint(editor, message));
     }
 }
